Fix jquota command and allow for querying multiple users at a time